--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
             </ul>
 
-           <a href="#"><img class="container__imagem" src="img/logo 1.svg" alt="logotipo da biblioteca start"></a>
-           <h1 class="titulo__cabecalho">Colégio Estaual Wilson Joffre</h1>
+           <a href="#"><img class="container__imagem  logo_imagem" src="img/logo.jpg" alt="logotipo da biblioteca start"></a>
+           <h1 class="titulo__cabecalho">Friends</h1>
         </div>
         <div class="container">
-           <a href="#"><img class="container__imagem" src="img/Favoritos.svg" alt="meus Favoritos"></a>
-           <a href="#"><img class="container__imagem" src="img/Emprestimos.svg" alt="meus empréstimos"></a>
-           <a href="#"><img class="container__imagem" src="img/Usuario.svg" alt="meu perfil"></a>
+           <a href="#"><img class="container__imagem  imagem_class" src="img/friends1.svg" alt="meus Favoritos"></a>
+           <a href="#"><img class="container__imagem  imagem_class" src="img/friends2.svg" alt="meus empréstimos"></a>
+           <a href="#"><img class="container__imagem  imagem_class" src="img/friends3.svg" alt="meu perfil"></a>
         </div>
     </header>
     <section class="gridimg">
@@ -44,15 +44,15 @@
             </span>
             <div class="div-imagem">
                 <img class="Imagem" src="img/imagem1.jpg" alt="">
-                <h1 class="titulo">imagem 1</h1>
+                <h1 class="titulo">Rachel Green</h1>
             </div>
             <div class="div-imagem">
                 <img class="Imagem" src="img/imagem2.jpg" alt="">
-                <h1 class="titulo">Imagem 2</h1>
+                <h1 class="titulo">Ross e Rachel</h1>
             </div>
             <div class="div-imagem">
                 <img class="Imagem" src="img/imagem3.jpg" alt="">
-                <h1 class="titulo">Imagem 3</h1>
+                <h1 class="titulo">Monica Geller</h1>
             </div>
             <span>
             </span>
@@ -60,16 +60,16 @@
             </span>
             <div class="div-imagem">
                 <img class="Imagem" src="img/imagem4.jpg" alt="">
-                <h1 class="titulo">Imagem 4</h1>
+                <h1 class="titulo">Joey Tribiani</h1>
             </div>
     
             <div class="div-imagem">
                 <img class="Imagem" src="img/imagem5.jpg" alt="">
-                <h1 class="titulo">Imagem 5</h1>
+                <h1 class="titulo">Chandeler Bing</h1>
             </div>
             <div class="div-imagem">
                 <img class="Imagem" src="img/imagem6.jpg" alt="">
-                <h1 class="titulo">Imagem 6</h1>
+                <h1 class="titulo">Ross Geller</h1>
             </div>
             <span>
             </span>
@@ -77,18 +77,18 @@
             </span>
             <div class="div-imagem">
                 <img class="Imagem" src="img/imagem7.jpg" alt="">
-                <h1 class="titulo">Imagem 7</h1>
+                <h1 class="titulo">Phoebe Buffay</h1>
             </div>
             <div class="div-imagem">
                 <img class="Imagem" src="img/imagem8.jpg" alt="">
-                <h1 class="titulo">Imagem 8</h1>
+                <h1 class="titulo">Chandler e Monica</h1>
             </div>
             <div class="div-imagem">
                 <img class="Imagem" src="img/imagem9.jpg" alt="">
-                <h1 class="titulo">Imagem 9</h1>
+                <h1 class="titulo">Monica e Rachel</h1>
             </div>
         </div>
-
+<h1 class="frase" >"Friends" é uma popular sitcom que segue a vida de seis amigos - Ross, Rachel, Monica, Chandler, Joey e Phoebe - enquanto enfrentam desafios pessoais e profissionais em Nova York. A série explora relacionamentos, carreiras e situações engraçadas do cotidiano,  proporcionando comédia e momentos emocionantes. Com suas personalidades únicas, o grupo compartilha risadas, amor e apoio ao longo de dez temporadas, tornando-se um ícone da cultura pop desde sua estreia em 1994.</h1>
     </section>
 </body>
 </html>
